[SDK] Create ServiceBase and ServiceBaseAsync.  Devtool compiles.
- Problems with AppMeta (references Ruyi.SDK.AppLauncher), RuyiSetting (uses ServicesGenerated), and maybe RuyiPatch
- Some files not generated in correct namespace: ServiceCommon.CommonTypes, InputManager, Media, and Speech

--- a/RuyiSDK/RuyiSDK.csproj
+++ b/RuyiSDK/RuyiSDK.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\RuyiLogger\RuyiLogger.csproj">
     </ProjectReference>
     <ProjectReference Include="..\SDK.Base\SDK.Base.csproj" />
+    <ProjectReference Include="..\ServiceGenerated\ServiceGenerated.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
