--- a/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
+++ b/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\externals\thrift.netcore\Thrift.csproj" />
     <ProjectReference Include="..\RuyiLogger\RuyiLogger.csproj" />
+    <ProjectReference Include="..\SDK.BaseAsync\SDK.BaseAsync.csproj" />
+    <ProjectReference Include="..\SDK.Gen.ServiceAsync\SDK.Gen.ServiceAsync.csproj" />
   </ItemGroup>
 
 </Project>
