[Layer0] Fix various runtime issues starting async layer0

--- a/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
+++ b/RuyiSDKAsync/SDK.RuyiSDKAsync.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\commons\Common\Common.csproj" />
     <ProjectReference Include="..\..\externals\thrift.netcore\Thrift.csproj" />
     <ProjectReference Include="..\RuyiLogger\RuyiLogger.csproj" />
     <ProjectReference Include="..\SDK.BaseAsync\SDK.BaseAsync.csproj" />
