--- a/SDK.Base/SDK.Base.csproj
+++ b/SDK.Base/SDK.Base.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>..\..\output\Debug\RuyiSDK\SDK.Base.xml</DocumentationFile>
+    <DefineConstants>TRACE;DEBUG;NASYNC</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>..\..\output\Release\RuyiSDK\SDK.Base.xml</DocumentationFile>
+    <DefineConstants>TRACE;NASYNC</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\SDK.BaseAsync\GeneratedTypeCache.cs" Link="GeneratedTypeCache.cs" />
     <Compile Include="..\SDK.BaseAsync\PublisherLogger.cs" Link="PublisherLogger.cs" />
     <Compile Include="..\SDK.BaseAsync\SDKUtility.cs" Link="SDKUtility.cs" />
     <Compile Include="..\SDK.BaseAsync\ServiceIDs.cs" Link="ServiceIDs.cs" />
