--- a/RuyiSDKCpp/RuyiSDKCpp.vcxproj
+++ b/RuyiSDKCpp/RuyiSDKCpp.vcxproj
@@ -464,18 +464,17 @@
     <ClCompile Include="Generated\UserServiceExternal\UserServiceExternalSDKServices_types.cpp" />
     <ClCompile Include="PubSub\SubscribeClient.cpp" />
     <ClCompile Include="RuyiNet\RuyiNetClient.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetCloudService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetFriendService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetLeaderboardService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetLobby.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetLobbyService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetMatchmakingService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetPartyService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetProfileService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Cloud\RuyiNetCloudService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Friend\RuyiNetFriendService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Lobby\RuyiNetLobby.cpp" />
+    <ClCompile Include="RuyiNet\Service\Lobby\RuyiNetLobbyService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Party\RuyiNetPartyService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Profile\RuyiNetProfileService.cpp" />
     <ClCompile Include="RuyiNet\Service\RuyiNetService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetTelemetryService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetUserFileService.cpp" />
-    <ClCompile Include="RuyiNet\Service\RuyiNetVideoService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Telemetry\RuyiNetTelemetryService.cpp" />
+    <ClCompile Include="RuyiNet\Service\UserFile\RuyiNetUserFileService.cpp" />
+    <ClCompile Include="RuyiNet\Service\Video\RuyiNetVideoService.cpp" />
     <ClCompile Include="RuyiSDK.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -543,20 +542,19 @@
     <ClInclude Include="RuyiNet\Response\RuyiNetUploadFileResponse.h" />
     <ClInclude Include="RuyiNet\RuyiNetClient.h" />
     <ClInclude Include="RuyiNet\RuyiNetException.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetCloudService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetFriendService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetLeaderboardService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetLeaderboardType.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetLobby.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetLobbyService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetMatchmakingService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetPartyService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetProfileService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetRotationType.h" />
+    <ClInclude Include="RuyiNet\Service\Cloud\RuyiNetCloudService.h" />
+    <ClInclude Include="RuyiNet\Service\Friend\RuyiNetFriendService.h" />
+    <ClInclude Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardService.h" />
+    <ClInclude Include="RuyiNet\Service\Leaderboard\RuyiNetLeaderboardType.h" />
+    <ClInclude Include="RuyiNet\Service\Leaderboard\RuyiNetRotationType.h" />
+    <ClInclude Include="RuyiNet\Service\Lobby\RuyiNetLobby.h" />
+    <ClInclude Include="RuyiNet\Service\Lobby\RuyiNetLobbyService.h" />
+    <ClInclude Include="RuyiNet\Service\Party\RuyiNetPartyService.h" />
+    <ClInclude Include="RuyiNet\Service\Profile\RuyiNetProfileService.h" />
     <ClInclude Include="RuyiNet\Service\RuyiNetService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetTelemetryService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetUserFileService.h" />
-    <ClInclude Include="RuyiNet\Service\RuyiNetVideoService.h" />
+    <ClInclude Include="RuyiNet\Service\Telemetry\RuyiNetTelemetryService.h" />
+    <ClInclude Include="RuyiNet\Service\UserFile\RuyiNetUserFileService.h" />
+    <ClInclude Include="RuyiNet\Service\Video\RuyiNetVideoService.h" />
     <ClInclude Include="RuyiSDK.h">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug_mt|x64'">true</DeploymentContent>
